[project]
name = "fondi"
version = "0.2.2"
authors = [
  { name="Valter Yde Daugberg", email="valteryde@hotmail.com" },
]
description = "LaTeX-like math renderer with PNG and SVG output"
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
keywords = ["math", "latex", "svg", "rendering", "typography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "pillow>=8.0",
  "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/valteryde/fondi"
Issues = "https://github.com/valteryde/fondi/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fondi = ["resources/*"]
